removed sensitive email stuff, app still works

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script type="text/javascript">
             (function(){
-            emailjs.init("UZeA12AzZPOqTWur1");
+            emailjs.init(/*sensitive email stuff here*/);
             })();
         </script>
         <title>Mock Interview App</title>
